# evanix

./: .clang-format  .gitignore  LICENSE  README.md  flake.nix  meson.build  meson_options.txt  package.nix  pyproject.toml  python-package.nix
.github/workflows/: build.yml  docs.yml
doc/evanix-nixcon24/: evanix-nixcon24.tex  package.nix
include/: build.h  cache.h  derivation.h  evanix.h  htab.h  jobid.h  jobs.h  nix.h  queue.h  solver_conformity.h  solver_greedy.h  solver_highs.h  solver_sjf.h  solver_util.h  test.h  util.h
nix/: linreg-shell.nix
nixos/tests/: README.md  all-tests.nix  dsl.nix  scope-fun.nix
scripts/: csv-dependson-passthru.py  csv-to-sqlite.py  linreg.py
src/: build.c  cache.c  derivation.c  evanix-py.c  evanix.c  htab.c  jobid.c  jobs.c  meson.build  nix.c  queue.c  solver_conformity.c  solver_greedy.c  solver_highs.c  solver_sjf.c  solver_util.c  util.c
tests/: dag.c  dag_merge.json  meson.build
